# claude-surfing-skills

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: hooks.json  marketplace.json  plugin.json
commands/: briefing.md  conditions.md  dashboard.md  research.md  verify.md  week.md  windows.md
docs/: AUTOMATION.md  FUTURE-IMPROVEMENTS.md  ROADMAP.md
docs/adr/: 0001-worldtides-behind-optional-key-for-non-us-tides.md  0002-puertos-del-estado-for-european-buoys.md  0003-surfline-demoted-to-snippet-level.md  0004-eot20-keyless-offline-tide-model.md  0005-per-spot-dashboard-replaces-single-report-and-terminal-output.md  0006-forecast-tab-interactive-week-overview-plus-per-day-drilldown.md  0007-fast-builds-emit-mechanically-corrected-verdicts.md
docs/research/: 2026-07-10-surf-data-sources.md  pytmd-eot20-tide-prediction.md
skills/spot-researcher/: SKILL.md
skills/spot-researcher/assets/: report-template.md  session-log-template.md  surfer-template.yaml  (+1 more)
skills/spot-researcher/tools/: README.md  build_package.py  cloudscrape.py  download_tide_model.py  fetch_conditions.py  prototype-visual-report.NOTES.md  prototype-visual-report.html  pyproject.toml  render_report.py  test_build_package.py  test_fetch_conditions.py  test_render_report.py  test_verify_forecast.py  verify_forecast.py
skills/spot-researcher/tools/testdata/: data-package.json  golden-dashboard-report.html  golden-dashboard-report.md  golden-report.html  golden-week-report.html  week-data-package.json
tests/end-to-end/: 2026-07-08-la-salvaje-sopelana.md  2026-07-08-mundaka.md  2026-07-10-mundaka-cached-conditions.md  2026-07-12-briefing-basque-home-spots.md  2026-07-12-la-salvaje-sopelana-check.md  2026-07-12-verify-mundaka-model-bias.md  2026-07-12-week-basque-home-spots.md
(+4 files in other folders)
