[project]
name = "spot-researcher-tools"
version = "0.1.0"
description = "Data gathering tools for surf spot research"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "astral>=3.2",
    "patchright>=1.49.0",
    "pyyaml>=6.0",
]

# Optional: free offline tide prediction from the EOT20 global harmonic model
# (ADR 0004). Kept out of the base install because pyTMD pulls a scientific
# stack (numpy/scipy/pyproj/xarray/...) and needs a one-time ~2 GB model
# download. Enable with `uv sync --extra tides`.
# pyTMD needs two companions that it does not pull in transitively: h5py (its
# h5netcdf reader opens EOT20's NETCDF4/HDF5 constituent files through the HDF5
# backend) and dask (xarray resolves a dask chunk manager when pyTMD opens the
# constituent atlases). Both were found necessary verifying an end-to-end EOT20
# prediction; the signature alone did not reveal them.
[project.optional-dependencies]
tides = ["pyTMD>=3.0.0", "h5py>=3.0", "dask>=2023.1"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
